[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/user interface/aboutBackground.jpg" type="Texture" id=1]
[ext_resource path="res://assets/Game Assets/Character/npc-ralph.png" type="Texture" id=2]
[ext_resource path="res://assets/Game Assets/Character/npc-naya.png" type="Texture" id=3]
[ext_resource path="res://assets/Game Assets/Character/npc-sophia.png" type="Texture" id=4]
[ext_resource path="res://assets/character sprites/sophiaContribution/princeCoach/ezgif-5-f45cb3dbf3-gif-2500x2500-sprite-png/tile000.png" type="Texture" id=5]
[ext_resource path="res://scripts/About.gd" type="Script" id=6]
[ext_resource path="res://assets/font/Pixellari.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/Game Assets/Icons/exit-icon.png" type="Texture" id=8]
[ext_resource path="res://assets/Game Assets/Icons/exit-icon-pressed.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[node name="About" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="spriteContainer" type="Control" parent="TextureRect"]
margin_left = 64.0
margin_top = 456.0
margin_right = 960.0
margin_bottom = 568.0

[node name="howard" type="TextureButton" parent="TextureRect/spriteContainer"]
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )
expand = true

[node name="sophia" type="TextureButton" parent="TextureRect/spriteContainer"]
margin_left = 128.0
margin_right = 256.0
margin_bottom = 128.0
texture_normal = ExtResource( 4 )
expand = true

[node name="naya" type="TextureButton" parent="TextureRect/spriteContainer"]
margin_left = 256.0
margin_right = 384.0
margin_bottom = 128.0
texture_normal = ExtResource( 3 )
expand = true

[node name="prince" type="TextureButton" parent="TextureRect/spriteContainer"]
margin_left = 384.0
margin_right = 512.0
margin_bottom = 128.0
texture_normal = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="TextureRect"]
margin_left = 80.0
margin_top = 88.0
margin_right = 254.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "Sample Text"

[node name="Label2" type="Label" parent="TextureRect"]
margin_left = 80.0
margin_top = 120.0
margin_right = 254.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0.768627, 0.266667, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sample Text"

[node name="description" type="RichTextLabel" parent="TextureRect"]
margin_left = 128.0
margin_top = 168.0
margin_right = 960.0
margin_bottom = 480.0
custom_fonts/normal_font = SubResource( 2 )

[node name="exit" type="TextureButton" parent="TextureRect"]
margin_left = 912.0
margin_top = 16.0
margin_right = 952.0
margin_bottom = 56.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
expand = true

[connection signal="pressed" from="TextureRect/spriteContainer/howard" to="." method="_on_howard_pressed"]
[connection signal="toggled" from="TextureRect/spriteContainer/howard" to="." method="_on_howard_toggled"]
[connection signal="pressed" from="TextureRect/spriteContainer/sophia" to="." method="_on_sophia_pressed"]
[connection signal="pressed" from="TextureRect/spriteContainer/naya" to="." method="_on_naya_pressed"]
[connection signal="pressed" from="TextureRect/spriteContainer/prince" to="." method="_on_prince_pressed"]
[connection signal="pressed" from="TextureRect/exit" to="." method="_on_exit_pressed"]
